@@ -13,6 +13,7 @@ import static com.hartwig.hmftools.lilac.hla.HlaGene.HLA_A;
 
 import java.io.BufferedWriter;
 import java.io.IOException;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -38,8 +39,8 @@ public class HlaYCoverage
 
     private boolean mExceedsThreshold;
 
-    private final Map<FragmentSource,Map<HlaAllele,int[]>> mSourceAlleleFragmentCounts;
-    private final Map<FragmentSource,int[]> mSourceMiscCounts;
+    private final Map<FragmentSource, Map<HlaAllele, int[]>> mSourceAlleleFragmentCounts;
+    private final Map<FragmentSource, int[]> mSourceMiscCounts;
 
     private BufferedWriter mWriter;
     private final LilacConfig mConfig;
@@ -53,7 +54,7 @@ public class HlaYCoverage
     private static final int EXON_3 = 1;
 
     public HlaYCoverage(
-            final List<HlaSequenceLoci> hlaYSequences, final Map<HlaGene, Map<Integer,Set<String>>> geneAminoAcidHetLociMap,
+            final List<HlaSequenceLoci> hlaYSequences, final Map<HlaGene, Map<Integer, Set<String>>> geneAminoAcidHetLociMap,
             final LilacConfig config)
     {
         mHlaYSequences = hlaYSequences;
@@ -73,7 +74,7 @@ public class HlaYCoverage
         if(!mExceedsThreshold)
             return null;
 
-        Map<HlaAllele,int[]> alleleCounts = mSourceAlleleFragmentCounts.get(REFERENCE);
+        Map<HlaAllele, int[]> alleleCounts = mSourceAlleleFragmentCounts.get(REFERENCE);
 
         if(alleleCounts == null)
             return null;
@@ -81,7 +82,7 @@ public class HlaYCoverage
         HlaAllele maxAllele = null;
         int maxUniqueCount = 0;
 
-        for(Map.Entry<HlaAllele,int[]> entry : alleleCounts.entrySet())
+        for(Map.Entry<HlaAllele, int[]> entry : alleleCounts.entrySet())
         {
             int uniqueCount = entry.getValue()[UNIQUE];
 
@@ -101,7 +102,7 @@ public class HlaYCoverage
         mAminoAcidHetLoci.addAll(geneAminoAcidHetLociMap.get(HLA_A).keySet());
     }
 
-    public void checkThreshold(final List<FragmentAlleles> fragAlleles, final List<Fragment> fragments)
+    public void checkThreshold(final List<FragmentAlleles> fragAlleles, final Collection<Fragment> fragments)
     {
         // test for presence of HLA-Y and strip out from consideration any fragment mapping to it
         int uniqueHlaY = 0;
@@ -112,9 +113,7 @@ public class HlaYCoverage
         // only test heterozygous locations in A since HLA-Y matches its exon boundaries
         for(Fragment fragment : fragments)
         {
-            List<Integer> fragAminoAcidLoci = fragment.aminoAcidsByLoci().keySet().stream()
-                    .filter(x -> mAminoAcidHetLoci.contains(x))
-                    .collect(Collectors.toList());
+            List<Integer> fragAminoAcidLoci = fragment.aminoAcidsByLoci().keySet().stream().filter(mAminoAcidHetLoci::contains).toList();
 
             if(fragAminoAcidLoci.isEmpty())
                 continue;
@@ -154,7 +153,7 @@ public class HlaYCoverage
             }
         }
 
-        int totalHlaYFrags = uniqueHlaY  + matchedFragmentAlleles.size();
+        int totalHlaYFrags = uniqueHlaY + matchedFragmentAlleles.size();
         double threshold = fragments.size() * mConfig.HlaYPercentThreshold;
         mExceedsThreshold = uniqueHlaY >= threshold;
 
@@ -166,7 +165,7 @@ public class HlaYCoverage
 
             if(mExceedsThreshold)
             {
-                matchedFragmentAlleles.forEach(x -> fragAlleles.remove(x));
+                matchedFragmentAlleles.forEach(fragAlleles::remove);
 
                 mRemovedRefFragAlleles.addAll(matchedFragmentAlleles); // remember for later counting purposes
                 mRemovedRefFragAlleles.forEach(x -> x.getFragment().setScope(HLA_Y, true));
@@ -175,7 +174,7 @@ public class HlaYCoverage
     }
 
     public void assignReferenceFragments(
-            final List<HlaAllele> alleles, final List<FragmentAlleles> fragAlleles, final List<Fragment> fragments)
+            final Collection<HlaAllele> alleles, final Iterable<FragmentAlleles> fragAlleles, final Iterable<Fragment> fragments)
     {
         // put back those fragments previously excluded due to being matched to HLA-Y
         List<FragmentAlleles> allFragAlleles = Lists.newArrayList(fragAlleles);
@@ -185,9 +184,10 @@ public class HlaYCoverage
     }
 
     public void assignFragments(
-            final List<HlaAllele> alleles, final List<FragmentAlleles> fragAlleles, final List<Fragment> fragments, final FragmentSource source)
+            final Collection<HlaAllele> alleles, final List<FragmentAlleles> fragAlleles, final Iterable<Fragment> fragments,
+            final FragmentSource source)
     {
-        Map<HlaAllele,int[]> sourceAlleleCounts = Maps.newHashMap();
+        Map<HlaAllele, int[]> sourceAlleleCounts = Maps.newHashMap();
         mSourceAlleleFragmentCounts.put(source, sourceAlleleCounts);
 
         int[] miscCounts = new int[2];
@@ -200,7 +200,7 @@ public class HlaYCoverage
         for(Fragment fragment : fragments)
         {
             List<Integer> fragAminoAcidLoci = fragment.aminoAcidsByLoci().keySet().stream()
-                    .filter(x -> mAminoAcidHetLoci.contains(x))
+                    .filter(mAminoAcidHetLoci::contains)
                     .collect(Collectors.toList());
 
             if(fragAminoAcidLoci.isEmpty())
@@ -261,24 +261,24 @@ public class HlaYCoverage
             }
         }
 
-        if(!source.equals(REFERENCE))
+        if(source != REFERENCE)
         {
             LL_LOGGER.info("HLA-Y src({}) fragments({} unique={}) shared={})",
                     source, uniqueHlaY + matchedFragmentAlleles.size(), uniqueHlaY, matchedFragmentAlleles.size());
 
             if(mExceedsThreshold)
-                matchedFragmentAlleles.forEach(x -> fragAlleles.remove(x));
+                matchedFragmentAlleles.forEach(fragAlleles::remove);
         }
     }
 
-    private static boolean fragmentSupportsSolution(final FragmentAlleles fragmentAlleles, final List<HlaAllele> alleles)
+    private static boolean fragmentSupportsSolution(final FragmentAlleles fragmentAlleles, final Collection<HlaAllele> alleles)
     {
-        return alleles.stream().anyMatch(x -> fragmentAlleles.contains(x));
+        return alleles.stream().anyMatch(fragmentAlleles::contains);
     }
 
     private static final int Y0101_X_LOCUS = 227;
 
-    private void updateMiscCounts(final Fragment fragment, final int[] miscCounts)
+    private static void updateMiscCounts(final Fragment fragment, final int[] miscCounts)
     {
         if(fragment.aminoAcidsByLoci().containsKey(Y0101_X_LOCUS) && fragment.aminoAcid(Y0101_X_LOCUS).equals("X"))
             ++miscCounts[Y0101_X];
@@ -296,7 +296,7 @@ public class HlaYCoverage
         if(mConfig.OutputDir.isEmpty() || !mExceedsThreshold)
             return;
 
-        for(Map.Entry<FragmentSource,int[]> entry : mSourceMiscCounts.entrySet())
+        for(Map.Entry<FragmentSource, int[]> entry : mSourceMiscCounts.entrySet())
         {
             FragmentSource source = entry.getKey();
             final int[] miscCounts = entry.getValue();
@@ -315,10 +315,10 @@ public class HlaYCoverage
             writer.write("Source\tAllele\tTotal\tShared\tHlaYShared\tUnique");
             writer.newLine();
 
-            for(Map.Entry<FragmentSource,Map<HlaAllele,int[]>> sourceEntry : mSourceAlleleFragmentCounts.entrySet())
+            for(Map.Entry<FragmentSource, Map<HlaAllele, int[]>> sourceEntry : mSourceAlleleFragmentCounts.entrySet())
             {
                 FragmentSource source = sourceEntry.getKey();
-                for(Map.Entry<HlaAllele,int[]> alleleEntry : sourceEntry.getValue().entrySet())
+                for(Map.Entry<HlaAllele, int[]> alleleEntry : sourceEntry.getValue().entrySet())
                 {
                     final HlaAllele allele = alleleEntry.getKey();
                     final int[] counts = alleleEntry.getValue();
@@ -339,12 +339,11 @@ public class HlaYCoverage
         catch(IOException e)
         {
             LL_LOGGER.error("failed to write HLA-Y coverage file({}): {}", fileName, e.toString());
-            return;
         }
     }
 
-    private void writeFragmentInfo(
-            final Fragment fragment, final List<Integer> fragAminoAcidLoci, final List<HlaAllele> hlayAlleles, boolean isShared)
+    private void writeFragmentInfo(final Fragment fragment, final Iterable<Integer> fragAminoAcidLoci,
+            final Iterable<HlaAllele> hlayAlleles, boolean isShared)
     {
         if(mConfig.OutputDir.isEmpty() || !mExceedsThreshold)
             return;
@@ -367,14 +366,13 @@ public class HlaYCoverage
             fragAminoAcidLoci.forEach(x -> sjLoci.add(x.toString()));
 
             mWriter.write(String.format("%s\t%s\t%s\t%s\t%s",
-                    fragment.id(), fragment.readInfo(), sjAlleles, isShared, sjLoci.toString()));
+                    fragment.id(), fragment.readInfo(), sjAlleles, isShared, sjLoci));
             mWriter.newLine();
 
         }
         catch(IOException e)
         {
             LL_LOGGER.error("failed to write HLA-Y fragments file: {}", e.toString());
-            return;
         }
     }
 }
